--- a/HoneyLight2/mystyle.css
+++ b/HoneyLight2/mystyle.css
@@ -1,8 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&family=Vidaloka&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css");
+
+body{
+    font-family: 'Oxygen', sans-serif;
+}
 .hero{
     background: url("assets/Intersect.png") no-repeat;
     background-size: contain;
     background-position: right top;
     background-color: #FFD699;
+    background-attachment: fixed;
 }
 .vr{
     opacity: 100%;
@@ -11,4 +18,91 @@
 }
 .active{
     border-bottom: #ED8E00 solid 3px;
+}
+h1, h2, h3, h4, h5, h6{
+    font-family: 'Vidaloka', serif;
+}
+.heading1{
+    font-size: 80px;
+}
+.text-yellow{
+    color: #ED8E00;
+}
+.heading2{
+    font-size: 70px;
+}
+.featured{
+    height: 500px;
+}
+.featured img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.carousel-item{
+    height: 500px;
+}
+.carousel-item img{
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+}
+.overlay{
+    background-color: rgba(0, 0, 0, 0.5);
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    z-index: 0;
+}
+.btn-yellow{
+    background-color: #ed8d00;
+    padding: 10px 40px;
+    color: white;
+    border: none;
+    text-transform: uppercase;
+}
+.btn-underlined{
+    padding: 3px 10px;
+    border-bottom: #ed8d00 3px solid;
+    text-decoration: none;
+    color: black;
+}
+.card-title{
+    font-size: xx-large;
+}
+.number{
+    padding: auto;
+    font-size: 50px;
+    position: absolute;
+    z-index: 0;
+}
+.testimonials-next, .testimonials-prev {
+  height: 100px;
+  width: 100px;
+  outline: black;
+  background-size: 100%, 100%;
+  background-image: none;
+}
+.testimonials-next:after{
+  content: '>';
+  font-size: 55px;
+  color: #ed8d00
+}
+.testimonials-prev:after {
+  content: '<';
+  font-size: 55px;
+  color: #ed8d00
+}
+.email{
+    width: 70%;
+    text-align: center;
+}
+.footer{
+    background-color: black;
+}
+.footer img {
+    width: 8%;
+}
+.text-gray {
+    color: gray;
 }
